--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     
     "python.linting.pylintArgs": ["--generate-members"],
-    "python.pythonPath": "C:\\Python27\\python.exe"
+    "python.pythonPath": "C:\\Program Files\\Python38\\python.exe",
+    "python.formatting.provider": "yapf"
 }
